--- a/tomorrow_web/src/main/webapp/WebApp.html
+++ b/tomorrow_web/src/main/webapp/WebApp.html
@@ -24,7 +24,7 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="WebApp/WebApp.nocache.js"></script>
+    <!--  <script type="text/javascript" language="javascript" src="WebApp/WebApp.nocache.js"></script>-->
   </head>
 
   <!--                                           -->
@@ -47,7 +47,7 @@
 
     <h1>Hello World! Tommorow Web App</h1>
     
-    
+    <input width="300px" title="KLeber Ilario" />
 
   </body>
 </html>
